--- a/packages/starship/.config/starship.toml
+++ b/packages/starship/.config/starship.toml
@@ -1,5 +1,15 @@
+[directory]
+truncate_to_repo = false
+
 [character]
 success_symbol = "🦄 "
 
 [git_branch]
 symbol = "🌱 "
+
+[kubernetes]
+format = '⛵[$context](dimmed green) '
+disabled = false
+
+[gcloud]
+disabled = true
