enable terraform formatter on vsc

--- a/vscode_settings.json
+++ b/vscode_settings.json
@@ -37,4 +37,10 @@
   "go.languageServerExperimentalFeatures": {
     "diagnostics": true
   },
+  
+  // terraform
+  "[terraform]": {
+    "editor.defaultFormatter": "hashicorp.terraform",
+    "editor.formatOnSave": true
+  }
 }
