--- a/vscode_settings.json
+++ b/vscode_settings.json
@@ -31,6 +31,7 @@
   "go.useLanguageServer": true,  
   "go.buildTags": "test integration_test",
   "go.lintTool": "golangci-lint",
+  "go.lintFlags": ["--build-tags", "test integration_test"],
   "go.languageServerExperimentalFeatures": {
     "diagnostics": true
   },
