feat: add terraform to asdf

--- a/vscode_settings.json
+++ b/vscode_settings.json
@@ -47,6 +47,8 @@
   // vscode spell checker
   "cSpell.ignoreWords": [
     "gomock",
-    "gorm"
+    "gorm",
+    "nekoshita",
+    "vals"
   ],
 }
