--- a/packages/skhd/.skhdrc
+++ b/packages/skhd/.skhdrc
@@ -27,16 +27,16 @@ shift + ctrl - w : yabai -m window --move rel:0:-20
 shift + ctrl - d : yabai -m window --move rel:20:0
 
 # increase window size
-shift + alt - a : yabai -m window --resize left:-20:0
-shift + alt - s : yabai -m window --resize bottom:0:20
-shift + alt - w : yabai -m window --resize top:0:-20
-shift + alt - d : yabai -m window --resize right:20:0
+shift + alt - a : yabai -m window --resize left:-40:0
+shift + alt - s : yabai -m window --resize bottom:0:40
+shift + alt - w : yabai -m window --resize top:0:-40
+shift + alt - d : yabai -m window --resize right:40:0
 
 # decrease window size
-shift + cmd - a : yabai -m window --resize left:20:0
-shift + cmd - s : yabai -m window --resize bottom:0:-20
-shift + cmd - w : yabai -m window --resize top:0:20
-shift + cmd - d : yabai -m window --resize right:-20:0
+shift + cmd - a : yabai -m window --resize left:40:0
+shift + cmd - s : yabai -m window --resize bottom:0:-40
+shift + cmd - w : yabai -m window --resize top:0:40
+shift + cmd - d : yabai -m window --resize right:-40:0
 
 # rotate tree
 alt - r : yabai -m space --rotate 90
@@ -59,6 +59,7 @@ alt - e : yabai -m window --toggle split
 
 # full screen
 alt - space : yabai -m window --toggle zoom-fullscreen
+# alt - space : yabai -m window --toggle float && yabai -m window --grid 4:4:1:1:2:2
 
 # layout
 alt - f : yabai -m space --layout float
