--- a/packages/yabai/.yabairc
+++ b/packages/yabai/.yabairc
@@ -14,14 +14,15 @@ yabai -m config active_window_border_color   0xFF00FF00
 yabai -m config normal_window_border_color   0xff555555
 yabai -m config insert_feedback_color        0xFF0000FF
 yabai -m config split_ratio                  0.50
-yabai -m config auto_balance                 on
+yabai -m config auto_balance                 off
 
 # Mouse
-yabai -m config mouse_modifier               ctrl
 yabai -m config mouse_follows_focus          on
 yabai -m config focus_follows_mouse          autoraise
-yabai -m config mouse_action1                move
+yabai -m config mouse_modifier               ctrl
+yabai -m config mouse_action1                move # not working
 yabai -m config mouse_action2                resize
+yabai -m config mouse_drop_action            stack
 
 
 
