--- a/packages/skhd/.skhdrc
+++ b/packages/skhd/.skhdrc
@@ -1,9 +1,9 @@
 # focus window
-alt - x : yabai -m window --focus recent
 alt - h : yabai -m window --focus west
 alt - j : yabai -m window --focus south
 alt - k : yabai -m window --focus north
 alt - l : yabai -m window --focus east
+alt - x : yabai -m window --focus recent
 alt - z : yabai -m window --focus stack.prev
 alt - c : yabai -m window --focus stack.next
 
@@ -45,7 +45,7 @@ alt - r : yabai -m space --rotate 90
 alt - y : yabai -m space --mirror y-axis
 
 # mirror tree x-axis
-alt - x : yabai -m space --mirror x-axis
+alt - t : yabai -m space --mirror x-axis
 
 # toggle desktop offset
 alt - a : yabai -m space --toggle padding && yabai -m space --toggle gap
