--- a/packages/skhd/.skhdrc
+++ b/packages/skhd/.skhdrc
@@ -52,17 +52,18 @@ alt - a : yabai -m space --toggle padding && yabai -m space --toggle gap
 
 
 # toggle window native fullscreen
-shift + alt - f : yabai -m window --toggle native-fullscreen
 
 # toggle window split type
 alt - e : yabai -m window --toggle split
 
 # full screen
 alt - space : yabai -m window --toggle zoom-fullscreen
-# alt - space : yabai -m window --toggle float && yabai -m window --grid 4:4:1:1:2:2
 
 # layout
-alt - f : yabai -m space --layout float
+shift + alt - f : yabai -m space --layout float
+alt - f : yabai -m window --toggle float && yabai -m window --grid 4:4:1:1:2:2
+# shift + alt - f : yabai -m window --toggle native-fullscreen
+
 # Toggle between bsp and stack
 alt + shift - space : [ "$(yabai -m query --spaces --space | jq -r '.type')" = bsp ] \
     && yabai -m space --layout stack \
