--- a/packages/yabai/.yabairc
+++ b/packages/yabai/.yabairc
@@ -15,6 +15,8 @@ yabai -m config normal_window_border_color   0xff555555
 yabai -m config insert_feedback_color        0xFF0000FF
 yabai -m config split_ratio                  0.50
 yabai -m config auto_balance                 off
+yabai -m config window_topmost               on
+yabai -m config window_shadow float
 
 # Mouse
 yabai -m config mouse_follows_focus          on
