--- a/packages/skhd/.skhdrc
+++ b/packages/skhd/.skhdrc
@@ -38,6 +38,10 @@ shift + cmd - s : yabai -m window --resize bottom:0:-40
 shift + cmd - w : yabai -m window --resize top:0:40
 shift + cmd - d : yabai -m window --resize right:-40:0
 
+# move window space
+shift + alt - n : yabai -m window --space prev && yabai -m space --focus next
+shift + alt - m: yabai -m window --space next && yabai -m space --focus prev
+
 # rotate tree
 alt - r : yabai -m space --rotate 90
 
@@ -47,16 +51,11 @@ alt - y : yabai -m space --mirror y-axis
 # mirror tree x-axis
 alt - t : yabai -m space --mirror x-axis
 
-# toggle desktop offset
-alt - a : yabai -m space --toggle padding && yabai -m space --toggle gap
-
-
-# toggle window native fullscreen
 
 # toggle window split type
 alt - e : yabai -m window --toggle split
 
-# full screen
+# full screen 
 alt - space : yabai -m window --toggle zoom-fullscreen
 
 # layout
@@ -68,6 +67,18 @@ alt - f : yabai -m window --toggle float && yabai -m window --grid 4:4:1:1:2:2
 alt + shift - space : [ "$(yabai -m query --spaces --space | jq -r '.type')" = bsp ] \
     && yabai -m space --layout stack \
     || yabai -m space --layout bsp
+
+# spaces
+shift + alt - z : yabai -m space --focus prev
+shift + alt - x : yabai -m space --focus recent
+shift + alt - c : yabai -m space --focus next
+alt - v : yabai -m space --create
+alt - b : yabai -m space --delete
+alt - n : yabai -m space --focus prev
+alt - m : yabai -m space --focus next
+
+# reset
+shift + alt - r : brew services restart yabai
 
 
 # debug
