feat: add settings for vscode plantuml extension

--- a/vscode_settings.json
+++ b/vscode_settings.json
@@ -52,4 +52,8 @@
     "vals"
   ],
   "window.zoomLevel": 1,
+
+  // plantuml
+  "plantuml.render": "PlantUMLServer",
+  "plantuml.server": "http://localhost:16375",
 }
