--- a/vscode_settings.json
+++ b/vscode_settings.json
@@ -5,6 +5,8 @@
   },
   "editor.formatOnSave": true,
   "diffEditor.codeLens": true, // 拡大率
+  // window
+  "window.zoomLevel": 1,
   // Explorer
   "explorer.confirmDelete": false,
   // ターミナル
