add vscode spell

--- a/vscode_settings.json
+++ b/vscode_settings.json
@@ -47,6 +47,7 @@
   // vscode spell checker
   "cSpell.ignoreWords": [
     "Interactor",
+    "Redash",
     "gomock",
     "gorm",
     "nekoshita",
